--- a/my-app/src/Home.css
+++ b/my-app/src/Home.css
@@ -1,13 +1,21 @@
-html, body, #root, .container {
+* {
+    box-sizing: border-box;
+  }
+  
+  html, body, #root, .container {
     height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
   }
   
   .container {
     display: flex;
     flex-direction: column;
-    background: linear-gradient(160deg, darkblue, purple);
+    justify-content: center;
+    align-items: center;
+    background-color: black;
   }
   
   .navBar {
@@ -17,9 +25,9 @@ html, body, #root, .container {
     justify-content: flex-end;
     align-items: center;
     width: 100%;
-    padding: 15px 0px;
+    padding: 15px 20px;
     background-color: transparent;
-    color: rgb(255, 255, 255);
+    color: white;
     z-index: 10;
   }
   
@@ -43,7 +51,7 @@ html, body, #root, .container {
   
   .centerButton {
     font-size: 4rem;
-    padding: 10px 40px;
+    padding: 10px 50px;
     color: white;
     background: rgba(255, 255, 255, 0.1);
     border: 2px solid white;
@@ -51,6 +59,17 @@ html, body, #root, .container {
     cursor: pointer;
     transition: all 0.3s ease;
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    animation: glow 2s ease-in-out infinite;
+  }
+  
+  @keyframes glow {
+    0% {
+      box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #e60000, 0 0 20px #e60000, 0 0 25px #e60000, 0 0 30px #e60000, 0 0 35px #e60000;
+    }
+    
+    100% {
+      box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60000, 0 0 40px #e60000, 0 0 50px #e60000, 0 0 60px #e60000, 0 0 70px #e60000;
+    }
   }
   
   .centerButton:hover {
@@ -61,5 +80,9 @@ html, body, #root, .container {
   .content {
     text-align: center;
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
   }
   
