--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -28,6 +28,24 @@
   color: #61dafb;
 }
 
+.backButton {
+  background: rgb(0, 0, 0);
+  border-radius: 5px;
+  color: rgb(255, 248, 248);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 24px;
+  margin: 0 4px;
+  padding: 15px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.backButton:hover {
+  box-shadow: 0 0 10px rgb(255, 0, 0), 0 0 5px rgb(255, 0, 0);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
