--- a/src/Home.css
+++ b/src/Home.css
@@ -105,21 +105,21 @@
 
   @media only screen and (max-width: 600px) {
     .navBar {
-      flex-direction: column;
-      background-color: black;
-      max-height: 100vh; /* limit the height to viewport height */
-      overflow-y: auto; /* introduce scroll when content is taller */
+      flex-direction: row;
+      position: fixed;
     }
   
     .navButton {
       font-size: 16px;
       padding: 10px;
-      margin: 10px 0;
+      margin: 10px 0; /* Increase vertical margin */
+      position: fixed;
     }
   
     .description {
       font-size: 1.4rem;
       padding: 0 5%;
+      position: fixed;
     }
   
     .centerButton {
@@ -127,4 +127,4 @@
       padding: 5px 30px;
     }
   }
-  
+ 
